BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_ServicePlanTemplate__c.object
<CustomObject>
    <fields>
        <fullName>CompanyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>HSvc_ServicePlanTemplates</relationshipLabel>
        <relationshipName>HSvc_ServicePlanTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServicePlanName__c</fullName>
        <label>Service Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicePlanType__c</fullName>
        <label>Service Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Plan Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ServicePlanName__c</columns>
        <columns>ServicePlanType__c</columns>
        <columns>CompanyID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Service Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>